python-apt (0.7.13.3) UNRELEASED; urgency=low

  [ Michael Vogt ]
  * apt/cache.py:
    - add actiongroup() method (backport from 0.7.92)
    - re-work the logic in commit() to fail if installArchives() returns
      a unexpected result

  [ Sebastian Heinlein ]
  * apt/package.py:
    - Export if a package is an essential one (Closes: #543428)

  [ Julian Andres Klode ]
  * python/depcache.cc:
    - Make ActionGroups context managers so apt.Cache.actiongroup() has
      the same behavior as in 0.7.92

 -- Julian Andres Klode <jak@debian.org>  Mon, 24 Aug 2009 15:43:00 +0200

python-apt (0.7.13.2) unstable; urgency=low

  * apt/cache.py:
   - Convert argument to str in __getitem__() (Closes: #542965).

 -- Julian Andres Klode <jak@debian.org>  Sat, 22 Aug 2009 22:47:30 +0200

python-apt (0.7.13.1) unstable; urgency=low

  * apt/package.py:
   - Fix Version.get_dependencies() to not ignore the arguments.

 -- Julian Andres Klode <jak@debian.org>  Fri, 21 Aug 2009 16:59:08 +0200

python-apt (0.7.13.0) unstable; urgency=low

  [ Michael Vogt ]
  * apt/package.py:
    - add "recommends" property
  * apt/cache.py, python/cache.cc:
    - add optional pulseInterval option to "update()"

  [ Sebastian Heinlein ]
  * apt/cache.py:
   - Fix the (inst|keep|broken|del)_count attributes (Closes: #542773).

  [ Julian Andres Klode ]
  * apt/package.py:
   - Introduce Version.get_dependencies() which takes one or more types
     of dependencies and returns a list of Dependency objects.
   - Do not mark the package as manually installed on upgrade (Closes: #542699)
   - Add Package.is_now_broken and Package.is_inst_broken.
  * apt/cache.py:
   - Introduce ProblemResolver class (Closes: #542705)
  * python/pkgsrcrecords.cc:
   - Fix spelling error (begining should be beginning).
  * po:
   - Update template and the translations de.po, fr.po (Closes: #467120),
     ja.po (Closes: #454293).
  * debian/control:
   - Update Standards-Version to 3.8.3.
  * debian/rules: